recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: value shrink is not a member of Double
  if (length.shrink>=1) {
             ^