recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (length.shrink>=1) {
    current(steps)
    avance(length)
    droite(angle)
    tree(steps-1, length*shrink, angle, shrink)
    recule(length*shrink)
    gauche(2*angle)
    tree(steps-1, length*shrink, angle, shrink)
	}
}